--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "homepage" : "https://yoLionGit.github.io/projeto-gihub-pucpr",
   "scripts": {
+    "hello": "node src/hello.js",
     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
